TEST_PROGRAMS/INVALID/omer_dirar/incorrect_float_int_string_syntax.min
#Syntactically incorrect: Incorrect syntax or int, float and string assignment

var x : int;
var y : float;
var z : string;

x = -00 + 00 + 120;
y = 12.-10 + -10.4r5;
z = "string: "sloe"" + "\n";

